--- a/.github/workflows/image-build-push.yaml
+++ b/.github/workflows/image-build-push.yaml
@@ -65,4 +65,4 @@ jobs:
         run: |
           docker run --rm ${{ secrets.DOCKERHUB_USERNAME }}/devops-docker:latest aws --version
           docker run --rm ${{ secrets.DOCKERHUB_USERNAME }}/devops-docker:latest terraform --version
-          docker run --rm ${{ secrets.DOCKERHUB_USERNAME }}/devops-docker:latest echo "123"
+          docker run --rm ${{ secrets.DOCKERHUB_USERNAME }}/devops-docker:latest helm version
