--- a/.github/workflows/image-build-push.yaml
+++ b/.github/workflows/image-build-push.yaml
@@ -11,6 +11,9 @@ on:
     types:
       - published
 
+env:
+  IMAGE_NAME: devops
+
 jobs:
   build-push:
     runs-on: ubuntu-latest
@@ -25,7 +28,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/devops-docker
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=latest
             type=semver,pattern={{version}}
